<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="32dp" tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:contentDescription="CIT-U Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/citu_logo" />
    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login to NASMS"
        android:textColor="@color/buff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFieldUsername" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"/> <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textFieldUsername"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/hint_username"
    app:boxStrokeColor="@color/buff"
    app:hintTextColor="@color/buff"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.4"> <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editTextUsername" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/white"/>
</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        app:boxStrokeColor="@color/buff"
        app:hintTextColor="@color/buff"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/buff"
        app:layout_constraintEnd_toEndOf="@+id/textFieldUsername"
        app:layout_constraintStart_toStartOf="@+id/textFieldUsername"
        app:layout_constraintTop_toBottomOf="@+id/textFieldUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin" android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/sanguine_brown"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
        app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
        app:layout_constraintEnd_toEndOf="@+id/textFieldPassword"/>

    <TextView
        android:id="@+id/textViewCreateAccountPrompt" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp" android:text="@string/prompt_create_account"
        android:textColor="@color/buff" app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>